--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.8.1
 Django==3.2.25
 django-allauth==0.41.0
+gunicorn==22.0.0
 oauthlib==3.2.2
+packaging==24.0
+pillow==10.3.0
 python3-openid==3.2.0
 pytz==2024.1
 requests-oauthlib==2.0.0
